external-crates/move/crates/move-package-alt/tests/data/invalid_hex_address_in_subst/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_hex_address_in_subst/Move.toml"`
  ┌─ "tests/data/invalid_hex_address_in_subst/Move.toml":6:34
  │
6 │ A = { local = "a", rename-from = { "A" = "0xG" } }
  │                                  ^^^^^^^^^^^^^^^
  │
  = invalid type: map, expected a string
